syntax = "proto3";

package example;

option java_package = "example.protocol";
option java_multiple_files = true;

service GreeterApi {
  // Returns HelloReply.
  // Let's play.
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  // name
  // e.g. hasebe
  string name = 1;
}

message HelloResponse {
  // message
  // e.g. Hello, hasebe
  string message = 1;
}
